shared/components/Choice/Choice.modules.scss
@import '../../../src/scss/settings/colours';

.alignCenter {
  align-items: center;
}

.alignFlexStart {
  align-items: flex-start;
}

.fakeInput {
  composes: thin from '../../../src/components/Borders.modules.scss';

  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;

  outline: 0;
  line-height: 0;

  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;

  margin-top: 0.125rem;

  transition: border-color 0.1s linear, background-color 0.1s linear;
}

.fakeCheckbox {
  composes: fakeInput;
  composes: rounded from '../../../src/components/Borders.modules.scss';
}

.fakeRadio {
  composes: fakeInput;
  composes: circular from '../../../src/components/Borders.modules.scss';
}

.unchecked {
  border-color: $color-shuttle-grey;
  background-color: $color-white;

  cursor: pointer;

  &.focused {
    border-color: $color-white;
  }
}

.error {
  border-color: $color-cardinal;
  background-color: $color-white;

  cursor: pointer;
}

.focused {
  box-shadow: 0 0 4px 1px $color-shuttle-grey;
}

.hiddenInput {
  // composes: noSpacing from '../Spacing.modules.scss';
  width: 10px;
  height: 10px;

  padding: 0;
  margin: 0;

  // Set opacity: 0 instead of display: none so that the checkbox can still
  //  emit focus/blur events
  opacity: 0;
  cursor: pointer;

  // to make sure the selected state (green circle) is properly aligned on mobile devices
  position: absolute;
  top: auto;
}

